--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url="dickstuut.nl/dist/index.html">
+<meta http-equiv="refresh" content="0; url="./dist/index.html">
